src/test/deca/context/valid/ContextAvecObjet/DeclMeth/methodNamedField.deca
// Description:
//   Méthode de même nom qu'un attribut
//
// Resultats:
//    ok
class A{

    int x;

    void x(int y){
        x = y;
    }
}

