src/test/deca/context/invalid/provided/ContextSansObjet/OperationsUnaires/Not_Int.deca
//Description:
//  Vérification contextuelle du type de sortie l'opérateur ! sur un type int
//Résultat:
//  Erreur contextuelle
//  ligne 8 : type incompatible

{
   int x = !true;
}